# Competitive-Programming

Codeforces Problems/: A - Acacius and String.cpp  A - Alex and a Rhombus.cpp  A - Alyona and Numbers.cpp  A - Alyona and mex.cpp  A - Anton and Letters.cpp  A - Anton and Polyhedrons.cpp  A - Arena of Greed.cpp  A - Array with Odd Sum.cpp  A - Autocomplete.cpp  A - Bad Triangle.cpp  A - Bad Ugly Numbers.cpp  A - Bear and Prime 100.cpp  A - Best Subsegment.cpp  A - Bit++.cpp  A - Black Square.cpp  A - Boboniu Likes to Color Balls.cpp  A - BowWow and the Timetable.cpp  A - Boy or Girl.cpp  A - Brain's Photos.cpp  A - Broken Keyboard.cpp  A - Buy a Shovel.cpp  A - Buying Torches.cpp  A - CME.cpp  A - Candies and Two Sisters.cpp  A - Candies.cpp  A - Cards.cpp  A - Chewbaсca and Number.cpp  A - Chips Moving.cpp  A - Circle Coloring.cpp  A - City Day.cpp  A - Co-prime Array.cpp  A - Common Prefixes.cpp  A - Common Subsequence.cpp  A - Comparing Two Long Integers.cpp  A - Counterexample.cpp  A - DIY Wooden Ladder.cpp  A - Deadline.cpp  A - Dice Tower.cpp  A - Die Roll.cpp  A - Display The Number.cpp  (+518 more)
Fegla_senior_1/: A.cpp  A_sqrt_2dfenwick.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  main.cpp  out
LeetCode/: 895.cpp  Minimum Number of Flips to Convert Binary Matrix to Zero Matrix.cpp
Project Euler/: 11.cpp  12.cpp  13.cpp  6.cpp  7.cpp  8.cpp  9.cpp
SPOJ/: Minimum kinght moves.cpp  NKMARS .cpp  ORDERSET.cpp  RMQSQ sqrt decomposition solution.cpp  RMQSQ.cpp  Validate the maze.cpp
UVA/: 378.cpp  796.cpp
(+84 files in other folders)
