cmake_minimum_required(VERSION 3.15)
project(Fegla_senior_1)


set(GCC_COVERAGE_COMPILE_FLAGS "-D_SHIT")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")

set(CMAKE_CXX_STANDARD 14)

add_executable(A A.cpp)
add_executable(B B.cpp)
add_executable(C C.cpp)
add_executable(D D.cpp)
add_executable(E E.cpp)
add_executable(F F.cpp)
add_executable(G G.cpp)
add_executable(H H.cpp)
add_executable(I I.cpp)
add_executable(J J.cpp)
add_executable(K K.cpp)
add_executable(L L.cpp)
add_executable(M M.cpp)
add_executable(N N.cpp)
add_executable(O O.cpp)
add_executable(P P.cpp)
add_executable(Q Q.cpp)
add_executable(R R.cpp)
add_executable(S S.cpp)
add_executable(T T.cpp)
add_executable(U U.cpp)
add_executable(V V.cpp)
add_executable(W W.cpp)
add_executable(X X.cpp)
add_executable(Y Y.cpp)
add_executable(Z Z.cpp)